--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,9 @@ body {
     background-color: #fcfbfb; 
 
     font-size: 16px;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    max-width: 64em;
     
 }
 h2{
@@ -16,23 +17,42 @@ h2{
 header {
     padding-top: 5px;
     text-align: center;
-    background-color:rgba(20,30,13, .7);
-}
-nav a:hover {
-    background-color: black;
-    color: #d9c2a3;
-    max-width: 0.5em;
-    max-height: 0.5em;
+    background-color:rgba(20, 30, 13, 0.377);
+    display: grid;
+    margin: auto;
+    grid-template-columns: 120px auto;
+    max-height: 200px;
 
 }
+ .home-grid{
+    display: grid;
+    grid-template-columns:1/10;
+    
+ }
+
+.logo{
+    padding-top: 1em;
+    justify-self: center;
+    align-self: center;
+    max-width: 150px;
+    max-height: 100px;
+}
+
+
 
 nav{
+    display: flex;
+    justify-content: space-around;
+    line-height: 3em;
+    text-align: center;
+    font-size: 1.0em;
 
-  line-height: 3em;
-  text-align: center;
-  font-size: 1.0em;
+}      
 
-}        
+nav a:hover {
+ color: #ffbe0b;
+
+}
 
 .icon {
     padding-top: 10px;
@@ -47,24 +67,53 @@ nav{
 nav a {
 
     text-align: center;
-    padding: 2em;
-    min-width: 150px;
+
+    padding-top: 1em;
+    padding-left: 3em;
+    min-width: -50px;
     text-decoration: none;
-    color: #fb5607;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-around;
 
       }
 
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -200px; 
+ }
+
+ 
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 150px;
+}
+         
 
 
 #hero-box{
-    text-align: center;
+    width: 100%;
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+
 }
 #hero-msg h1{
+    color: #ffffff;
     text-align: center;
+    margin: auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 #hero-msg h4{
+    color: #ffffff;
+    margin: auto;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .button-box{
@@ -78,6 +127,8 @@ text-align: center;
 }
 
 #background {
+    grid-column: 1/11;
+    grid-row: 4/9;
     height: 100px;
 
 }
@@ -88,13 +139,11 @@ text-align: center;
 }
            
 .book{
-    margin-top: 50px;
-    font-size: 1em;
-    height: 100px;
+    font-size: 1.0em;
     text-decoration: none;
-    padding:0.5em;
-    min-width: 150px;
-    color:#8338ec
+    color:#ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .join{
@@ -102,13 +151,11 @@ text-align: center;
     font-size: 1.2em;
     text-decoration: none;
     padding: 0.2em;
-    color :#ffbe0b
+    color :#ffbe0b;
 }
 
 .book:hover{
-    padding: 0.5em;
-    color: #ffffff;
-    background-color:#8338ec
+    color:#ffbe0b;
 }
 
 .join:hover{
@@ -117,32 +164,6 @@ text-align: center;
     
 }
 
-.msg{
-    margin: 0 auto;
-    color: #ffffff;
-    background-color: #8338ec;
-    line-height: 1.2em;
-    padding :1em
-}
-
-.msg h2{
-
-}
-
-.msg p{
-    padding-bottom: 15px;
-}
-
-footer{
-    margin-top: 50px;
-    padding: 25px ,50px;
-    background-color:rgba(28, 41, 18, 0.7);
-    text-wrap: balance;
-    text-align: left;
-    
-    background-color:#ffffff;
-
-}
 
 header img{
     max-width: 170px;
@@ -162,27 +183,137 @@ footer .social img{
 }
 
 .home-title{
+    grid-column: 6/10;
+    grid-row: 6/7;
     
     margin-top: 10px;
+
 }
 
 .rivers-card{
+
+    grid-column: 2/4;
+    grid-row: 2/3;
     margin: 100px 0;
 }
 
 .camping-card{
+
+    grid-column: 5/7;
+    grid-row: 2/3;
     margin: 100px 0;
 }
 
 .rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
     margin: 100px 0;
 }
 
 
 .card-img {
+        justify-content: center;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+    width: 100%;
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 100%;
+
+}
+
 main section img {
-    box-sizing: border-box;
+    margin: auto;
 }
+
+.msg{
+    margin: 0 auto;
+    color: #ffffff;
+    background-color: #8338ec;
+    line-height: 1.2em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2{
+
+    margin: auto;
+
+}
+
+
+.msg p{
+    padding-bottom: 15px;
+}
+
+footer{
+    margin-top: 50px;
+    padding: 25px ,50px;
+    background-color:rgba(28, 41, 18, 0.7);
+    text-wrap: balance;
+    text-align: left;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+    
             
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
