--- a/styles/contactus.css
+++ b/styles/contactus.css
@@ -7,11 +7,21 @@ body {
     font-size: 16px;
     margin: auto;
     padding: 0;
-    max-width: 64em;
+    max-width: 62.5em;
     
 }
-h2{
-    margin: 0;
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: left;
+    font-size: x-large;
+    color: #244d8f;}
+
+
+h2, h3, h4{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: auto auto;
+    justify-self: left;
+    font-size: larger;
 
 }
 header {
@@ -21,7 +31,7 @@ header {
     display: grid;
     margin: auto;
     grid-template-columns: 120px auto;
-    max-height: 200px;
+    max-height: 80px;
 
 }
  .home-grid{
@@ -100,21 +110,7 @@ nav a {
     z-index: -1;
 
 }
-#hero-msg h1{
-    color: #ffffff;
-    text-align: center;
-    margin: auto;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-}
-
-#hero-msg h4{
-    color: #ffffff;
-    margin: auto;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
 
 .button-box{
     text-decoration: none;
@@ -138,31 +134,6 @@ text-align: center;
     text-align: center;
 }
            
-.book{
-    font-size: 1.0em;
-    text-decoration: none;
-    color:#ffffff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
-.join{
-    margin-top: 50px;
-    font-size: 1.2em;
-    text-decoration: none;
-    padding: 0.2em;
-    color :#ffbe0b;
-}
-
-.book:hover{
-    color:#ffbe0b;
-}
-
-.join:hover{
-    color: #ffffff;
-    background-color:#8338ec
-    
-}
 
 
 header img{
@@ -190,54 +161,7 @@ footer .social img{
 
 }
 
-.rivers-card{
 
-    grid-column: 2/4;
-    grid-row: 2/3;
-    margin: 100px 0;
-}
-
-.camping-card{
-
-    grid-column: 5/7;
-    grid-row: 2/3;
-    margin: 100px 0;
-}
-
-.rapids-card {
-    grid-column: 8/10;
-    grid-row: 2/3;
-    margin: 100px 0;
-}
-
-
-.card-img {
-        justify-content: center;
-        justify-items: center;
-        align-items: center;
-        align-content: center;
-    width: 100%;
-    border: 10px solid #d9c2a3;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
-}
-
-
-.mountains{
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-    width: 100%;
-
-}
-
-main section img {
-    margin: auto;
-}
 
 .msg{
     margin: 0 auto;
@@ -270,10 +194,76 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
+
 }
 
-
-    
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
+  
+/* hi sir, the Feedback CSS kept breaking my code so I chose to leave it out */
             
 
 
